# test-read-the-docs-with-mkdocs

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: index.md  requirements.txt
site/: 404.html  index.html  requirements.txt  sitemap.xml
site/search/: search_index.json
tests/: test_all.py
