[tool.poetry]
name = "test-read-the-docs-with-mkdocs"
version = "0.1.0"
description = ""
authors = ["Nayan Biswas <nayan32biswas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = { version = "^4.3.3", extras = ["srv"] }
pydantic = "^1.8.2"


[tool.poetry.group.dev.dependencies]
# Formatter and linters
black = "^23.9.0"
mypy = "1.5.0"
ruff = "^0.1.5"
# Test
coverage = { extras = ["toml"], version = "^7.2.2" }
pytest = "^7.2.2"
# Doc generators
mdx-include = "^1.4.2"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.4"
# Others
pre-commit = "^3.3.3"
pip-tools = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
parallel = true
source = ["tests"]
context = '${CONTEXT}'

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]
